# state2action-vision

./: AGENTS.md  PROJECT_STATE.md  README.md  pyproject.toml
configs/presets/: vertical_720p.yaml
configs/schemas/: dataset.schema.json  events.schema.json
src/state2action_vision/: __init__.py
src/state2action_vision/config/: __init__.py  presets.py  schemas.py
src/state2action_vision/dataset/: __init__.py  io.py
tests/: test_cli_smoke.py  test_dataset_io.py  test_inspect_roi_tool.py  test_preset_loader.py
tools/: inspect_roi.py  validate_jsonl.py
